syntax = "proto3";

package vega;
option go_package = "code.vegaprotocol.io/vega/proto";

message Asset {
  uint64 id = 1;
  string name = 2;
  string symbol = 3;
  uint64 totalSupply = 4;
  uint64 decimals = 5;
  oneof source {
    BuiltinAsset builtinAsset = 101;
    ERC20 erc20 = 102;
  }
}

message AssetSource {
  oneof source {
    BuiltinAsset builtinAsset = 1;
    ERC20 erc20 = 2;
  }
}

message BuiltinAsset {
  string name = 2;
  string symbol = 3;
  uint64 totalSupply = 4;
  uint64 decimals = 5;
}

message ERC20 {
  string contractAddress = 1;
}